--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = ststm32
 board = bluepill_f103c8
 framework = arduino
 upload_protocol = stlink
+monitor_speed = 115200
 
 lib_deps =
   PID
