--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,12 @@ lib_deps =
   6158
   5568
   342
+
+build_flags = 
+    -D O0
+; 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+; 	-D USBCON
+; 	-D USBD_VID=0x0483
+; 	-D USB_MANUFACTURER="FABLAB UTP"
+; 	-D USB_PRODUCT="\"JAHIR ES UN\""
+; 	-D HAL_PCD_MODULE_ENABLED
