New serial interface

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,19 +14,10 @@ board = bluepill_f103c8
 framework = arduino
 upload_protocol = stlink
 monitor_speed = 115200
-
-lib_deps =
-  PID
-;   Encoder
-  6158
-  5568
-  ; 342
-
+lib_deps = 
+	PID
+	6158
+	5568
+	deafloo/ODriveArduino@0.0.0-alpha+sha.306000f46e
 build_flags = 
-    -D O0
-; 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
-; 	-D USBCON
-; 	-D USBD_VID=0x0483
-; 	-D USB_MANUFACTURER="FABLAB UTP"
-; 	-D USB_PRODUCT="\"JAHIR ES UN\""
-; 	-D HAL_PCD_MODULE_ENABLED
+	-D O0
