--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,10 @@ lib_deps =
 	deafloo/ODriveArduino@0.0.0-alpha+sha.306000f46e
 build_flags = 
 	-D O0
+	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+	-D USBCON
+	-D USBD_VID=0x6587
+	-D USBD_PID=0x0483
+	-D USBD_MANUFACTURER_STRING="FABLAB UTP"
+	-D USBD_PRODUCT_STRING="\"BLUEPILL_F103C8\""
+	; -D HAL_PCD_MODULE_ENABLED
