External serial sensirion sensor, flow controller, WIP

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,4 +27,4 @@ build_flags =
 	-D USBD_PID=0x0483
 	-D USBD_MANUFACTURER_STRING="FABLAB UTP"
 	-D USBD_PRODUCT_STRING="\"BLUEPILL_F103C8\""
-	; -D HAL_PCD_MODULE_ENABLED
+	-D HAL_PCD_MODULE_ENABLED
